# glm

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  copying  copying.txt  glmConfig.cmake  manual.md  readme  readme.md  readme.txt
test/: CMakeLists.txt  core.cpp  glm.cppcheck  header.cpp  img.cpp  img.hpp  main.cpp  precompiled.cpp  precompiled.hpp
test/bug/: CMakeLists.txt  bug_ms_vec_static.cpp  ms_vec2.cpp
test/core/: CMakeLists.txt  core_cpp_constexpr.cpp  core_cpp_defaulted_ctor.cpp  core_force_aligned_gentypes.cpp  core_force_arch_unknown.cpp  core_force_compiler_unknown.cpp  core_force_ctor_init.cpp  core_force_cxx03.cpp  core_force_cxx11.cpp  core_force_cxx98.cpp  core_force_cxx_unknown.cpp  core_force_explicit_ctor.cpp  core_force_platform_unknown.cpp  core_force_pure.cpp  core_force_unrestricted_gentype.cpp  core_force_xyzw_only.cpp  core_func_common.cpp  core_func_exponential.cpp  core_func_geometric.cpp  core_func_integer.cpp  core_func_integer_bit_count.cpp  core_func_integer_find_lsb.cpp  core_func_integer_find_msb.cpp  core_func_matrix.cpp  core_func_noise.cpp  core_func_packing.cpp  core_func_swizzle.cpp  core_func_trigonometric.cpp  core_func_vector_relational.cpp  core_setup_force_cxx98.cpp  core_setup_message.cpp  core_setup_platform_unknown.cpp  core_setup_precision.cpp  core_setup_simd.cpp  core_type_aligned.cpp  core_type_cast.cpp  core_type_ctor.cpp  core_type_float.cpp  core_type_half.cpp  core_type_int.cpp  (+39 more)
test/ext/: CMakeLists.txt  ext_bvec1.cpp  ext_matrix_common.cpp  ext_matrix_relational.cpp  ext_matrix_transform.cpp  ext_quaternion_common.cpp  ext_quaternion_geometric.cpp  ext_quaternion_transform.cpp  ext_scalar_common.cpp  ext_scalar_float_sized.cpp  ext_scalar_int_sized.cpp  ext_scalar_integer.cpp  ext_scalar_reciprocal.cpp  ext_scalar_relational.cpp  ext_scalar_uint_sized.cpp  ext_vec1.cpp  ext_vector_bvec1.cpp  ext_vector_common.cpp  ext_vector_double1.cpp  ext_vector_dvec1.cpp  ext_vector_float1.cpp  ext_vector_integer.cpp  ext_vector_ivec1.cpp  ext_vector_reciprocal.cpp  ext_vector_relational.cpp  ext_vector_uvec1.cpp  ext_vector_vec1.cpp
test/gtc/: CMakeLists.txt  double_float.cpp  gtc-integer-matrix.cpp  gtc-swizzle.cpp  gtc_bitfield.cpp  gtc_color.cpp  gtc_color_encoding.cpp  gtc_constants.cpp  gtc_dual_quaternion.cpp  gtc_epsilon.cpp  gtc_half_float.cpp  gtc_integer.cpp  gtc_matrix_access.cpp  gtc_matrix_integer.cpp  gtc_matrix_inverse.cpp  gtc_matrix_transform.cpp  gtc_noise.cpp  gtc_packing.cpp  gtc_quaternion.cpp  gtc_random.cpp  gtc_reciprocal.cpp  gtc_round.cpp  gtc_swizzle.cpp  gtc_type_aligned.cpp  gtc_type_precision.cpp  gtc_type_ptr.cpp  gtc_ulp.cpp  gtc_vec1.cpp  half_float.cpp  matrix_access.cpp  matrix_operation.cpp  matrix_projection.cpp  matrix_transform.cpp  quaternion.cpp  type_precision.cpp
test/gtx/: CMakeLists.txt  associated_min_max.cpp  bit.cpp  closest_point.cpp  color_cast.cpp  color_space.cpp  comparison.cpp  compatibility.cpp  component_wise.cpp  epsilon.cpp  euler_angles.cpp  extend.cpp  extented_min_max.cpp  fast_exponential.cpp  fast_square_root.cpp  fast_trigonometry.cpp  gtx-bit.cpp  gtx-noise.cpp  gtx-simd-mat4.cpp  gtx-simd-vec4.cpp  gtx-ulp.cpp  gtx_bit.cpp  gtx_closest_point.cpp  gtx_color_space.cpp  (+99 more)
(+2848 files in other folders)
